--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -4,7 +4,12 @@
             <div class="row">
                 <h1 class="post-title">{{post.title}}</h1>
                 <p>{{post.text|linebreaksbr}}</p>
-                <p class="post-meta">Author: <a href="#">{{post.author}}</a> | Published: {{post.published_date}}</p>
+                <p class="post-meta">
+                	Author: <a href="#">{{post.author}}</a> | Published: {{post.published_date}}
+                	{% if user.is_authenticated %}
+                	<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><i class="glyphicon glyphicon-pencil"></i> Edit post</a>
+                	{% endif %}
+                </p>
             </div>
         </div>
 {% endblock %}
